--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+
+# Core app
 streamlit>=1.34.0
 plotly>=5.22.0
 pandas>=2.2.0
 requests
+
+# Google / YouTube integrations
 google-auth
 google-auth-oauthlib
 google-api-python-client
+
+# Google Sheets (easy Sheets access via gspread)
+gspread
+gspread_dataframe
+
+# Handy date utilities (ISO parsing, ranges)
+python-dateutil
