--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ google-auth-oauthlib
 google-api-python-client
 
 # Google Sheets (easy Sheets access via gspread)
-gspread
-gspread_dataframe
+gspread==6.1.2
+google-auth==2.33.0
 
 # Handy date utilities (ISO parsing, ranges)
 python-dateutil
